--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.1"
+    "react-router-dom": "^6.2.2",
+    "react-scripts": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
