--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router": "^6.3.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^3.4.1"
   },
